# orange

./: CMakeLists.txt
core/: CMakeLists.txt
core/src/: asset_manager.cpp  gl.buffer.cpp  gl.handle.cpp  gl.program.cpp  gl.shader.cpp  gl.texture.cpp  gl.utils.cpp  gl.vertex_array.cpp  glad.c  renderer.cpp  tile_map.cpp
core/src/embedded/shaders/: tile_map.vertex
core/src/glad/: glad.h
core/src/orange/: asset_manager.hpp  byte_buffer.hpp  renderer.hpp  tile.hpp  tile_map.hpp
core/src/orange/gl/: buffer.hpp  handle.hpp  program.hpp  shader.hpp  texture.hpp  utils.hpp  vertex_array.hpp  vertex_attrib.hpp
editor/: CMakeLists.txt
editor/src/: application.cpp  application.hpp  mainframe.cpp  mainframe.hpp  tilemap_view.cpp  tilemap_view.hpp  viewport.cpp  viewport.hpp
embedded/: CMakeLists.txt
embedded/resources/shaders/: tile_map.fragment
game/: CMakeLists.txt
game/src/: game.cpp  game.hpp  main.cpp
scripts/: embed.py
